[gd_scene load_steps=13 format=3 uid="uid://f41bx4kq48y2"]

[ext_resource type="Texture2D" uid="uid://opd72pklwpof" path="res://assets/sprites/limezuUI/Modern_UI_Style_1_32x32.png" id="1_1075l"]
[ext_resource type="Script" uid="uid://bnwo4ujfjlg4u" path="res://scripts/ui/evidence_inventory_settings.gd" id="1_evidence_script"]
[ext_resource type="FontFile" uid="uid://cosmobyr7yxle" path="res://assets/fonts/PixelOperatorMono-Bold.ttf" id="3_kplyb"]
[ext_resource type="FontFile" uid="uid://bckedio4uqong" path="res://assets/fonts/PixelOperatorMono.ttf" id="4_g1gxs"]
[ext_resource type="Texture2D" uid="uid://dry7sdk247u16" path="res://assets/sprites/evidence/logbook_evidence.png" id="5_umk2s"]
[ext_resource type="Texture2D" uid="uid://j2jxgty7i0ov" path="res://assets/sprites/evidence/handwriting_sample_evidence.png" id="6_ph1hf"]
[ext_resource type="Texture2D" uid="uid://c6cm5onic2j2i" path="res://assets/sprites/evidence/broken_body_cam_evidence.png" id="7_pa4yr"]
[ext_resource type="Texture2D" uid="uid://db3e4htmfrqb5" path="res://assets/sprites/evidence/radio_log_evidence.png" id="9_qy8d8"]
[ext_resource type="Texture2D" uid="uid://7eyqc8ci3vkk" path="res://assets/sprites/evidence/autopsy_evidence.png" id="10_b6idw"]
[ext_resource type="Texture2D" uid="uid://bhy7qjtrwwacl" path="res://assets/sprites/evidence/leos_notebook_evidence.png" id="11_nob0d"]

[sub_resource type="LabelSettings" id="LabelSettings_kplyb"]
line_spacing = 2.0
font = ExtResource("3_kplyb")
font_size = 19
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_umk2s"]
font = ExtResource("4_g1gxs")
font_size = 13
font_color = Color(0, 0, 0, 1)

[node name="EvidenceInventory" type="CanvasLayer"]
script = ExtResource("1_evidence_script")

[node name="UIContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -152.0
offset_right = 236.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2

[node name="EvidenceBoxDesvriptionBG" type="NinePatchRect" parent="UIContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -252.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.950997, 1)
texture = ExtResource("1_1075l")
region_rect = Rect2(24, 502, 48, 50)
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="EvidenceLabel" type="Label" parent="UIContainer/EvidenceBoxDesvriptionBG"]
layout_mode = 0
offset_left = 109.359
offset_top = 28.0
offset_right = 195.359
offset_bottom = 47.0
label_settings = SubResource("LabelSettings_kplyb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EvidenceName" type="Label" parent="UIContainer/EvidenceBoxDesvriptionBG"]
layout_mode = 0
offset_left = 202.0
offset_top = 28.0
offset_right = 454.0
offset_bottom = 47.0
label_settings = SubResource("LabelSettings_kplyb")
vertical_alignment = 1

[node name="EvidenceDescription" type="Label" parent="UIContainer/EvidenceBoxDesvriptionBG"]
layout_mode = 0
offset_left = 109.359
offset_top = 52.0
offset_right = 437.359
offset_bottom = 108.0
label_settings = SubResource("LabelSettings_umk2s")
autowrap_mode = 3

[node name="EvidenceDisplay" type="TextureRect" parent="UIContainer/EvidenceBoxDesvriptionBG"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 80.0
expand_mode = 1
stretch_mode = 5

[node name="EvidenceCloseUp" type="NinePatchRect" parent="UIContainer/EvidenceBoxDesvriptionBG"]
layout_mode = 0
offset_left = 16.8245
offset_top = 24.0
offset_right = 96.8245
offset_bottom = 104.0
texture = ExtResource("1_1075l")
region_rect = Rect2(16, 16, 64, 62)
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40

[node name="TextureRect" type="TextureRect" parent="UIContainer/EvidenceBoxDesvriptionBG/EvidenceCloseUp"]
layout_mode = 0
offset_left = 12.6183
offset_top = 13.0
offset_right = 67.6183
offset_bottom = 70.0

[node name="SettingsTab" type="NinePatchRect" parent="UIContainer"]
z_index = 1
layout_mode = 0
offset_left = 46.0
offset_right = 86.0
offset_bottom = 40.0
texture = ExtResource("1_1075l")
region_rect = Rect2(928, 384, 32, 32)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="SettingsIcon" type="NinePatchRect" parent="UIContainer/SettingsTab"]
layout_mode = 0
offset_left = 6.0
offset_top = 7.0
offset_right = 33.0
offset_bottom = 34.0
scale = Vector2(1.04651, 0.987863)
texture = ExtResource("1_1075l")
region_rect = Rect2(320, 370, 30, 30)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="EvidenceBoxListBG" type="NinePatchRect" parent="UIContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 152.0
offset_bottom = 260.0
grow_horizontal = 2
scale = Vector2(0.950997, 1)
texture = ExtResource("1_1075l")
region_rect = Rect2(24, 502, 48, 50)
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Evidence1" type="NinePatchRect" parent="UIContainer/EvidenceBoxListBG"]
layout_mode = 0
offset_left = 42.0611
offset_top = 32.0
offset_right = 90.0611
offset_bottom = 80.0
texture = ExtResource("1_1075l")
region_rect = Rect2(120, 502, 48, 50)
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="BrokenBodyCamEvidence" type="Sprite2D" parent="UIContainer/EvidenceBoxListBG/Evidence1"]
z_index = 1
position = Vector2(25.2367, 24)
scale = Vector2(1.05153, 1)
texture = ExtResource("7_pa4yr")

[node name="Button" type="Button" parent="UIContainer/EvidenceBoxListBG/Evidence1"]
z_index = -1
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0

[node name="Evidence2" type="NinePatchRect" parent="UIContainer/EvidenceBoxListBG"]
layout_mode = 0
offset_left = 108.307
offset_top = 32.0
offset_right = 156.307
offset_bottom = 80.0
texture = ExtResource("1_1075l")
region_rect = Rect2(120, 502, 48, 50)
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="RadioLogEvidence" type="Sprite2D" parent="UIContainer/EvidenceBoxListBG/Evidence2"]
z_index = 1
position = Vector2(24.1855, 25)
scale = Vector2(1.05153, 1)
texture = ExtResource("9_qy8d8")

[node name="Button" type="Button" parent="UIContainer/EvidenceBoxListBG/Evidence2"]
z_index = -1
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0

[node name="Evidence3" type="NinePatchRect" parent="UIContainer/EvidenceBoxListBG"]
layout_mode = 0
offset_left = 175.605
offset_top = 32.0
offset_right = 223.605
offset_bottom = 80.0
texture = ExtResource("1_1075l")
region_rect = Rect2(120, 502, 48, 50)
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="LogbookEvidence" type="Sprite2D" parent="UIContainer/EvidenceBoxListBG/Evidence3"]
position = Vector2(24.1853, 25)
scale = Vector2(1.05153, 1)
texture = ExtResource("5_umk2s")

[node name="Button" type="Button" parent="UIContainer/EvidenceBoxListBG/Evidence3"]
z_index = -1
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0

[node name="Evidence4" type="NinePatchRect" parent="UIContainer/EvidenceBoxListBG"]
layout_mode = 0
offset_left = 242.903
offset_top = 32.0
offset_right = 290.903
offset_bottom = 80.0
texture = ExtResource("1_1075l")
region_rect = Rect2(120, 502, 48, 50)
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="HandwritingSampleEvidence" type="Sprite2D" parent="UIContainer/EvidenceBoxListBG/Evidence4"]
position = Vector2(24.1851, 25)
scale = Vector2(1.05153, 1)
texture = ExtResource("6_ph1hf")

[node name="Button" type="Button" parent="UIContainer/EvidenceBoxListBG/Evidence4"]
z_index = -1
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0

[node name="Evidence5" type="NinePatchRect" parent="UIContainer/EvidenceBoxListBG"]
layout_mode = 0
offset_left = 309.149
offset_top = 32.0
offset_right = 357.149
offset_bottom = 80.0
texture = ExtResource("1_1075l")
region_rect = Rect2(120, 502, 48, 50)
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="AutopsyEvidence" type="Sprite2D" parent="UIContainer/EvidenceBoxListBG/Evidence5"]
position = Vector2(24.1849, 25)
scale = Vector2(1.05153, 1)
texture = ExtResource("10_b6idw")

[node name="Button" type="Button" parent="UIContainer/EvidenceBoxListBG/Evidence5"]
z_index = -1
layout_mode = 0
offset_right = 47.0
offset_bottom = 48.0

[node name="Evidence6" type="NinePatchRect" parent="UIContainer/EvidenceBoxListBG"]
layout_mode = 0
offset_left = 377.499
offset_top = 32.0
offset_right = 425.499
offset_bottom = 80.0
texture = ExtResource("1_1075l")
region_rect = Rect2(120, 502, 48, 50)
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="LeosNotebookEvidence" type="Sprite2D" parent="UIContainer/EvidenceBoxListBG/Evidence6"]
position = Vector2(24.1855, 25)
scale = Vector2(1.05153, 1)
texture = ExtResource("11_nob0d")

[node name="Button" type="Button" parent="UIContainer/EvidenceBoxListBG/Evidence6"]
z_index = -1
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0

[node name="EvidenceTab" type="NinePatchRect" parent="."]
z_index = 1
offset_left = 408.0
offset_top = 208.0
offset_right = 448.0
offset_bottom = 248.0
texture = ExtResource("1_1075l")
region_rect = Rect2(928, 384, 32, 32)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="evidenceIcon" type="NinePatchRect" parent="EvidenceTab"]
layout_mode = 0
offset_left = 6.0
offset_top = 7.0
offset_right = 33.0
offset_bottom = 34.0
scale = Vector2(1.04651, 0.987863)
texture = ExtResource("1_1075l")
region_rect = Rect2(256, 366, 32, 36)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 9
